Added component for demo and also updated app.module.ts file

--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,7 +1,1 @@
-<h1> Hii Just started to learn Angular </h1>
-{{title}}
-<h2>{{name}}</h2>
-<h3>{{getName()}}</h3>
-<h4>{{obj.name}}</h4>
-<h5>{{arr[0]}}</h5>
-<h3>{{siteUrl}}</h3>
+<app-first-comp></app-first-comp>
