Updtaed code for property binding

--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-first-comp></app-first-comp>
+<br><br>
+<input type="text" [disabled]="disabledBox" value="Anant">
+<br><br>
+<input type="text" [disabled]="disabledBox" value="Anant">
+<br><br>
+<button (click)="enabledBox()">Enabled text box</button>
