--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-first-comp></app-first-comp>
-<button (click)="getName()">Pls click me</button>
-<app-userinfo></app-userinfo>
+<h1>Routing Example</h1>
+<a routerLink="/first">First</a>
+<br><br>
+<a routerLink="/info">User</a>
+<router-outlet></router-outlet>
 
