Passing data from child to parent

--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-first-comp></app-first-comp>
-<button (click)="getName()">Pls click me</button>
-<app-userinfo></app-userinfo>
-
+<app-first-comp (setname)="setName($event)"></app-first-comp>
