Created Custom Directive

--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-first-comp></app-first-comp>
-<button (click)="getName()">Pls click me</button>
-<app-userinfo></app-userinfo>
-
+<h1>Without custom directive</h1>
+<br><br>
+<h1 appCustom >with custom directive</h1>
