grprouting is created

--- a/learn/src/app/app.component.html
+++ b/learn/src/app/app.component.html
@@ -1,7 +1,10 @@
-<h1> Hii Just started to learn Angular </h1>
-{{title}}
-<h2>{{name}}</h2>
-<h3>{{getName()}}</h3>
-<h4>{{obj.name}}</h4>
-<h5>{{arr[0]}}</h5>
-<h3>{{siteUrl}}</h3>
+<h1> Admin </h1>
+<a routerLink="admin/Login">Login</a>
+<br><br>
+<a routerLink="admin/SignUp">SignUp</a>
+<br><br><br>
+<h1> User </h1>
+<a routerLink="user/Login">Login</a>
+<br><br>
+<a routerLink="user/SignUp">SignUp</a>
+<router-outlet></router-outlet>
